# kith

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs  main.rs
apps/desktop/ui/: app.css  app.js  index.html
apps/files/: Cargo.toml
apps/files/src/: lib.rs  model.rs
apps/files/tests/: files.rs
apps/memory/: Cargo.toml  README.md
apps/memory/src/: lib.rs  main.rs  model.rs
apps/memory/tests/: edge_cases.rs  mcp.rs  memory_sync.rs
apps/tabs/: Cargo.toml
apps/tabs/src/: lib.rs  model.rs
apps/tabs/tests/: mcp.rs  multi_tab.rs  tab_sync.rs
assets/brand/: README.md
docs/: LAUNCH.md  PAIRING.md  PRIVACY.md  RELEASING.md  throughput.md
infra/: .env.example  README.md  deploy.md
infra/dns/: Dockerfile  config.toml  docker-compose.yml
infra/relay/: Dockerfile  docker-compose.yml  relay.toml
mesh-engine/: Cargo.toml
mesh-engine/src/: atrest.rs  auth.rs  blobs.rs  config.rs  doc.rs  endpoint.rs  epoch.rs  error.rs  export.rs  identity.rs  keychain.rs  keys.rs  lib.rs  membership.rs  pair.rs  pairing.rs  space.rs  sync.rs
mesh-engine/tests/: auth.rs  auto_sync.rs  blob_transfer.rs  carry_forward.rs  convergence.rs  convergence3.rs  export_import.rs  file_read.rs  pairing.rs  pairing_flow.rs  persistence.rs  recovery.rs  relay.rs  resilience.rs  revocation.rs  roles.rs  spaces.rs  throughput.rs
mesh-engine/tests/common/: mod.rs
mesh-mcp/: Cargo.toml
mesh-mcp/src/: lib.rs
www/: 404.html  index.html  llms.txt  robots.txt  site.webmanifest  sitemap.xml
