# centralTabs family — Cargo workspace
#
# The engine is the product. `mesh-engine` is the serverless, end-to-end-encrypted,
# flat-mesh P2P substrate: identity, mainline-DHT discovery, relay fallback, account-
# free pairing, and CRDT sync — every peer an equal replica, no hub, no account, no
# data-bearing server.
#
# Apps are thin and run on the one substrate, the way iroh-blobs/-docs run on iroh:
#   - apps/tabs       centralTabs (the first app)
#   - apps/dropwire   Dropwire-on-mesh (next — proves the engine on the BLOB primitive)
#   - apps/mcp        an MCP app (later)
[workspace]
resolver = "2"
members = ["mesh-engine", "mesh-mcp", "apps/tabs", "apps/memory", "apps/files", "apps/desktop"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"
authors = ["Muhamad J. Akoum <keon.me@gmail.com>"]
homepage = "https://github.com/muhamadjawdatsalemalakoum/kith"
repository = "https://github.com/muhamadjawdatsalemalakoum/kith"
keywords = ["p2p", "crdt", "iroh", "mcp", "end-to-end-encryption"]
categories = ["network-programming", "cryptography", "asynchronous"]

# Pinned deliberately. iroh core is stable (1.0). The CRDT (automerge) and the PAKE
# (spake2) are pre-1.0 and VENDOR-friendly (permissive licenses) — we own the churn
# behind mesh-core's stable internal API rather than depending on a hosted service.
[workspace.dependencies]
iroh = "=1.0.0"
# Mainline-DHT (pkarr) discovery — our default, serverless peer discovery (no DNS
# server we run). Independently versioned crate that depends on iroh ^1.0.0.
iroh-mainline-address-lookup = "0.4.0"
# CRDT core (Rust). NOTE: the Rust crate line is 0.x (the 1.0 betas were yanked; the
# "3.0" branding is the JS package, not this crate). Pin exactly and re-verify on bump.
automerge = "=0.10.0"
# PAKE for device pairing: derive a shared group key from a short code. python-spake2
# / Magic-Wormhole compatible. MIT/Apache (NOT the EUPL Magic-Wormhole app code).
spake2 = "0.4.0"
# Content-addressed blob transfer (the BLOB primitive). Pre-1.0; pinned exactly and
# wrapped behind the engine's `blobs` module. Same pin Dropwire ships.
iroh-blobs = "=0.103.0"
# Async stream helpers (StreamExt) for the blob fetch loop, matching Dropwire.
n0-future = "0.3"
# Key-confirmation MAC for pairing + the group-key auth handshake.
hmac = "0.12"
sha2 = "0.10"
# At-rest encryption (AEAD) + constant-time comparison for auth.
chacha20poly1305 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-lite = "2"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
data-encoding = "2"
# Stable per-entry ids for memory entries (random v4 — id-based forget).
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
